--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
 	},
 	"dependencies": {
 		"acorn": "^5.3.0",
-		"fs-extra": "^5.0.0",
-		"glob-promise": "^3.3.0",
+		"babel-preset-stage-0": "^6.24.1",
 		"execa": "^0.8.0",
+		"fs-extra": "^5.0.0",
 		"glob": "^7.1.2",
+		"glob-promise": "^3.3.0",
 		"inquirer": "^4.0.1",
 		"semver": "^5.4.1",
 		"yeoman-generator": "^2.0.1"
